@@ -1,3 +1,7 @@
+lldpd (1.0.11)
+  * Fix:
+    + Ensure Intel E8xx cards can transmit LLDP packets.
+
 lldpd (1.0.10)
   * Fix:
     + Fix chroot directory creation.
